--- a/CBChaoBaoLife/CBHomePage.storyboard
+++ b/CBChaoBaoLife/CBHomePage.storyboard
@@ -45,10 +45,40 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="wjo-c7-NtA"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <segue destination="GUW-2Y-fIE" kind="show" identifier="tofupage" id="AN5-X6-kH2"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C6j-bI-UZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1016.5" y="59.5"/>
+        </scene>
+        <!--Function Table View Controller-->
+        <scene sceneID="Iao-fd-75a">
+            <objects>
+                <tableViewController storyboardIdentifier="fupage" id="GUW-2Y-fIE" customClass="CBFunctionTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="l7A-0n-lrS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1vA-N6-J3u">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1vA-N6-J3u" id="FKJ-7c-BgT">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="GUW-2Y-fIE" id="aKc-FC-jsu"/>
+                            <outlet property="delegate" destination="GUW-2Y-fIE" id="8at-jD-E5H"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lNb-8h-reh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1502" y="17"/>
         </scene>
     </scenes>
 </document>
