--- a/CBChaoBaoLife/CBShowBaby.storyboard
+++ b/CBChaoBaoLife/CBShowBaby.storyboard
@@ -30,7 +30,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="DCD-Kc-AM8">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="showCell" id="DCD-Kc-AM8" customClass="CBShowBabyTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DCD-Kc-AM8" id="3Xn-Qa-LHa">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -47,7 +47,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8VR-dn-k75" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-194" y="53"/>
+            <point key="canvasLocation" x="-271.5" y="31.5"/>
         </scene>
     </scenes>
 </document>
