--- a/CBChaoBaoLife/CBSignInandLogIn.storyboard
+++ b/CBChaoBaoLife/CBSignInandLogIn.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HLQ-ct-gnU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -57,6 +58,9 @@
                                 <state key="normal" title="新用户点击注册">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="signup:" destination="NkS-F9-7y6" eventType="touchUpInside" id="6Gi-CR-iXx"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1vc-G4-y1J">
                                 <rect key="frame" x="163" y="364" width="87" height="30"/>
@@ -67,12 +71,81 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="8nq-6D-eM1"/>
+                    <navigationItem key="navigationItem" title="登录" id="eZW-Ga-las"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="password" destination="k0t-rq-YLI" id="Nc3-dN-QVs"/>
+                        <outlet property="username" destination="Gke-i3-UZP" id="Rv9-Tu-5F4"/>
+                        <segue destination="30g-zr-r6f" kind="show" identifier="tosignin" id="9NW-Z5-ORF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIr-2j-C6i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="410.5" y="-328.5"/>
+            <point key="canvasLocation" x="644.5" y="-326.5"/>
+        </scene>
+        <!--注册-->
+        <scene sceneID="OUR-2L-jTd">
+            <objects>
+                <viewController title="注册" id="30g-zr-r6f" customClass="CBSignInViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4OP-Q5-Mg9"/>
+                        <viewControllerLayoutGuide type="bottom" id="ebS-CI-MO7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nVJ-3J-rpf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入邮箱号或手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kGf-qg-w0N">
+                                <rect key="frame" x="89" y="204" width="155" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="if8-C6-taM">
+                                <rect key="frame" x="89" y="253" width="155" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="账号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sN-9I-NDu">
+                                <rect key="frame" x="30" y="213" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.16078431372549021" green="0.41568627450980394" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="密码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e9P-WK-lDU">
+                                <rect key="frame" x="30" y="262" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.16078431369999999" green="0.41568627450000001" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mQN-bx-Ltc">
+                                <rect key="frame" x="0.0" y="637" width="375" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Gqu-Kg-Qzs"/>
+                                </constraints>
+                                <state key="normal" title="注册">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="signin:" destination="30g-zr-r6f" eventType="touchUpInside" id="oty-cW-VSf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ebS-CI-MO7" firstAttribute="top" secondItem="mQN-bx-Ltc" secondAttribute="bottom" id="Ato-JC-t2O"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mQN-bx-Ltc" secondAttribute="trailing" constant="-16" id="CzQ-4a-XKQ"/>
+                            <constraint firstItem="mQN-bx-Ltc" firstAttribute="leading" secondItem="nVJ-3J-rpf" secondAttribute="leadingMargin" constant="-16" id="yNi-4z-8Ug"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="account" destination="kGf-qg-w0N" id="ngk-B6-T4M"/>
+                        <outlet property="password" destination="if8-C6-taM" id="Y62-eX-g9R"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qwf-hH-x29" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="630.5" y="471.5"/>
         </scene>
     </scenes>
 </document>
